# booklovers_backend

./: .coverage  .coveragerc  .gitignore  Dockerfile  README.md  cert.crt  cert.key  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
authentication/: admin.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
authentication/tests/: test_custom_users.py  test_serializers.py
booklovers/: asgi.py  settings.py  urls.py  wsgi.py
books/: constants.py  models.py  serializers.py  urls.py  views.py
books/management/command/: initdb.py
books/management/commands/: initdb.py
books/migrations/: 0001_initial.py  0002_rename_books_book.py  0003_auto_20210512_1234.py  0004_alter_author_author_name.py  0005_keyword.py  0006_alter_book_options.py  0006_alter_book_title.py
