[tool.poetry]
name = "booklovers"
version = "0.1.0"
description = ""
authors = ["Melissendra <melissendra77@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
djangorestframework = "^3.12.4"
psycopg2 = "^2.8.6"
coverage = "^5.5"
Pillow = "^8.2.0"
flake8 = "^3.9.1"
django-allauth = "^0.44.0"
dj-rest-auth = "^2.1.4"
pytest-django = "^4.2.0"
python-dotenv = "^0.17.0"
django-cors-headers = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
